--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,11 @@ html {
 :root {
   --typingDuration: 3.4s;
   --typedCharacters: 15;
+  --deepOcean: #020218ef;
+  --marksAndSparksGreen: #2b9348;
+  --silverFox: rgb(202, 202, 202);
+  --gandalfTheGrey: rgb(163, 163, 167);
+  --cardWidth: 20vw;
 }
 
 
@@ -43,7 +48,7 @@ ul  {
 
 nav ul a {
   text-decoration: none;
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   opacity: 0;
   animation: fade-in 3s ease forwards calc(var(--typingDuration) + 4.1s);
 
@@ -56,7 +61,7 @@ nav a {
 
 
 nav a:hover {
-  text-decoration: underline;
+  /* text-decoration: underline; */
   color: whitesmoke;
 }
 
@@ -64,9 +69,9 @@ nav a:hover {
 .hero-section {
   font-family: 'Source Code Pro', monospace;
   height: 100vh;
-  background-color: #2b9348;
+  background-color: var(--marksAndSparksGreen);
   color: whitesmoke;
-  font-size: 2.7rem;
+  /* font-size: 2.7rem; */
   text-align: center;
 }
 
@@ -112,7 +117,7 @@ h1::before, h1::after {
 }
 
 h1::before {
-  background: #2b9348;
+  background: var(--marksAndSparksGreen);
   animation: typing var(--typingDuration) steps(var(--typedCharacters)) 1.7s forwards;
 }
 
@@ -147,7 +152,7 @@ h2 {
 
 .about-me-section {
   height: 140vh;
-  background-color: #020218ef;
+  background-color: var(--deepOcean);
   color: whitesmoke;
   
   border-top: solid whitesmoke 2px;
@@ -161,7 +166,7 @@ h2 {
 
 
 .projects-section {
-  height: 100vh;
+  /* height: 100vh; */
   color: whitesmoke;
   background-color: #2b9348;
   border-top: solid whitesmoke;
@@ -181,21 +186,90 @@ h2 {
 
 } */
 
+.projects-section p {
+  background-color: var(--deepOcean);
+  color: var(--gandalfTheGrey);
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
+
+.all-collapsibles-container {
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 10%;
+}
+
+.collapsible-container {
+  width: var(--cardWidth);
+  box-shadow: 0px 0px 20px 2px whitesmoke;
+  /* border: solid var(--deepOcean) 1px; */
+
+}
+
+.project-image-div {
+  width: 100%;
+  background-color: var(--deepOcean);
+  display:flex;
+  justify-content: center;
+}
+
+.collapsible-container img {
+  width: 80%;
+  display:block;
+ 
+}
+.collapsible {
+  background-color:var(--deepOcean);
+  color: var(--gandalfTheGrey);
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: center;
+  outline: none;
+  font-size: 15px;
+
+}
+
+.active, .collapsible:hover {
+  background-color: #721111;
+}
+
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #941e1e;
+  font-size: 1rem;
+}
+
+.project-links {
+  height:60px;
+  background-color: red;
+}
+
+
+
+
+
+
+
+
 .skillset-section {
-  height: 100vh;
-  background-color: rgb(202, 202, 202);
-  color: #2b9348;
+  /* height: 100vh; */
+  background-color: var(--gandalfTheGrey);
+  color:var(--marksAndSparksGreen);
   border-bottom: solid white 4px;
  
 }
 
 .skillset-section h2 {
-  font-weight: 400;
+  font-weight: 300;
 }
 
 .contact-me-section {
   height: 100vh;
-  background-color: #2b9348;
+  background-color: var(--marksAndSparksGreen);
   color: whitesmoke;
   
  
@@ -203,13 +277,13 @@ h2 {
 
 .form-container {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center;
+  align-items: center; */
   width: 60%;
   max-width: 340px;
   margin: 0 auto;
   padding: 20px;
-  box-shadow: 0px 0px 20px rgb(17, 8, 3);
+  box-shadow: 0px 0px 20px whitesmoke;
   border-radius: 8px;
   margin-bottom: 20px;
   text-align: left;
@@ -222,7 +296,7 @@ input[type=text], input[type=email], textarea {
   border: solid;
   border-style: inset;
   width: 100%;
-  background-color: rgb(202, 202, 202);
+  background-color:var(--gandalfTheGrey);
   font-size: 60%;
   padding-left: 4px;
  
@@ -231,17 +305,18 @@ input[type=text], input[type=email], textarea {
 
 
 textarea {
-  border: solid;
+  /* border: solid; */
   border-style: inset;
   resize: none;
   height: 24vh;
 
-}
+} 
 
 textarea:focus-visible,
 input[type=text]:focus-visible,
 input[type=email]:focus-visible {
   outline: none;
+  background-color:  rgb(202, 202, 202);
 }
 
 label {
